fix: changed search function from static